--- a/website/templates/generate_report.html
+++ b/website/templates/generate_report.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
-<h1 align="center">Generate Report</h1>
-{% endblock %}
+
+<form method="POST">
+  <h1 align="center">Generate Report</h1>
+  {% endblock %}
+</form>
