--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,21 +1,56 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-%}
-<h1 align="center">About</h1>
-<body>
-  <div class="form-container">
-    <form class="left-form">
-      <h2>Form 1</h2>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" />
-      <button type="submit">Submit</button>
-    </form>
+{% extends "base.html" %}
 
-    <form class="right-form">
-      <h2>Form 2</h2>
+{% block title %}About{% endblock %}
+
+{% block content %}
+
+<div class="about-page">
+  <h1 align="center">Welcome</h1>
+  
+  <div class="container">
+    <!-- Left Column: Personal and Patient Information -->
+    <div class="left-column">
+      <h2>Personal Information</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Name" value="{{ user.first_name }}"><br><br>
+
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" />
-      <button type="submit">Submit</button>
-    </form>
+      <input type="email" id="email" name="email" placeholder="Email" value="{{ user.email }}"><br><br>
+
+      <h2>Patient Information</h2>
+      <label for="patient-id">Patient ID:</label>
+      <input type="text" id="patient-id" name="patient-id" placeholder="Patient ID" value="{{ user.patient_id }}"><br><br>
+
+      <button class="view-medical-history-btn">View Medical History</button><br><br>
+    </div>
+
+    <!-- Right Column: Device Information -->
+    <div class="right-column">
+      <h2>Device Information</h2>
+      <label for="model-number">Device model number:</label>
+      <input type="text" id="model-number" name="model-number" placeholder="Model Number" value="XX-XXXX" disabled><br><br>
+
+      <label for="version">Software Version:</label>
+      <input type="text" id="version" name="version" placeholder="Version" value="v2.3.4" disabled><br><br>
+
+      <label for="serial-number">DCM Serial Number:</label>
+      <input type="text" id="serial-number" name="serial-number" placeholder="Serial Number" value="789123" disabled><br><br>
+
+      <label for="institution-name">Institution Name:</label>
+      <input type="text" id="institution-name" name="institution-name" placeholder="Institution Name" value="McMaster Children's Hospital" disabled style="width: 300px;"><br><br>
+
+
+      <label for="update-date">Date of Last Update:</label>
+      <input type="date" id="update-date" name="update-date" value="2024-10-05" disabled><br><br>
+
+      <button class="update-device-info-btn">Update Device Information</button>
+    </div>
   </div>
-</body>
+ 
+
 {% endblock %}
+
+
+
+
+
