--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -125,6 +125,7 @@
 
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" placeholder="Email" value="{{ user.email }}"><br><br>
+      <button class="view-medical-history-btn">Update Personal Information</button><br><br><br><br>
 
       <h2>Patient Information</h2>
       <label for="patient-id">Patient ID:</label>
