report generation and egram data

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -77,16 +77,19 @@
                   </div>
                 </li>
       
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="about" href="/about">About</a>
-          <a class="nav-item nav-link" id="set_clock" href="/set-clock">Set Clock</a>
-          <a class="nav-item nav-link" id="bradycardia_therapy" href="/bradycardia-therapy">Bradycardia Therapy</a>
-          <a class="nav-item nav-link" id="generate_report" href="/generate-report">Generate Report</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          {% else %}
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          <a class="nav-item nav-link" id="Login" href="/login">Login</a>
-          {% endif %}
+                <a class="nav-item nav-link" id="home" href="/">Home</a>
+                <a class="nav-item nav-link" id="about" href="/about">About</a>
+                <a class="nav-item nav-link" id="set_clock" href="/set-clock">Set Clock</a>
+                <a class="nav-item nav-link" id="bradycardia_therapy" href="/bradycardia-therapy">Bradycardia Therapy</a>
+                <a class="nav-item nav-link" id="generate_report" href="/generate-report">Generate Report</a>
+                <a class="nav-item nav-link" id="view_egram" href="/view_egram">View Egram</a> <!-- New link -->
+                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                <a class="nav-item nav-link" id="Login" href="/login">Login</a>
+                
+                {% endif %}
+                
         </div>
       </div>
     </nav>
